<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/detalhes_prova" />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materia" />

        <TextView
            android:id="@+id/detalhe_prova_materia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <!-- Codigo omitido... -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />
        <TextView
            android:id="@+id/detalhe_prova_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <ListView
        android:id="@+id/detalhe_prova_topicos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</TableLayout>



